--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-	"name": "meetapp",
-	"version": "1.0.0",
-	"description": "Events Aggregator",
-	"main": "server.js",
-	"author": "Felipe Maffezzolli",
-	"license": "MIT",
-	"scripts": {
-		"dev": "nodemon src/server.js"
-	},
-	"dependencies": {
-		"express": "^4.17.1",
-		"sucrase": "^3.10.1"
-	},
-	"devDependencies": {
-		"eslint": "^6.0.1",
-		"eslint-config-prettier": "^6.0.0",
-		"eslint-plugin-prettier": "^3.1.0",
-		"nodemon": "^1.19.1",
-		"prettier": "^1.18.2"
-	}
+  "name": "meetapp",
+  "version": "1.0.0",
+  "description": "Events Aggregator",
+  "main": "server.js",
+  "author": "Felipe Maffezzolli",
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "lint": "eslint --fix src"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "sequelize": "^5.9.4",
+    "sucrase": "^3.10.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "sequelize-cli": "^5.5.0"
+  }
 }
